fix: fix links not aligned to row on Safari

--- a/static/style.css
+++ b/static/style.css
@@ -49,7 +49,6 @@ table {
   
 .links::before {
     content: "";
-    display: block;
     position: absolute;
     left: 0;
     width: 100%;
